removed unwanted text

--- a/index.html
+++ b/index.html
@@ -278,29 +278,20 @@
         <!-- About Section Content-->
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">
-              Freelancer is a free bootstrap theme created by Start Bootstrap.
-              The download includes the complete source files including HTML,
-              CSS, and JavaScript as well as optional SASS stylesheets for easy
-              customization.
-            </p>
+            <p class="lead">#################</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">
-              You can create your own custom avatar for the masthead, change the
-              icon in the dividers, and add your email address to the contact
-              form to make it fully functional!
-            </p>
+            <p class="lead">##############################</p>
           </div>
         </div>
         <!-- About Section Button-->
         <div class="text-center mt-4">
           <a
             class="btn btn-xl btn-outline-light"
-            href="https://startbootstrap.com/themes/freelancer/"
+            href="https://github.com/sheminanto"
           >
-            <i class="fas fa-download mr-2"></i>
-            Free Download!
+            <i class="fab fa-github mr-2"></i>
+            Github
           </a>
         </div>
       </div>
@@ -413,9 +404,9 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
             <p class="lead mb-0">
-              2215 John Daniel Drive
+              Shemin Anto
               <br />
-              Clark, MO 65243
+              #######
             </p>
           </div>
           <!-- Footer Social Icons-->
@@ -437,12 +428,7 @@
           <!-- Footer About Text-->
           <div class="col-lg-4">
             <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">
-              Freelance is a free to use, MIT licensed Bootstrap theme created
-              by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>
-              .
-            </p>
+            <p class="lead mb-0">##################</p>
           </div>
         </div>
       </div>
