--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Masthead Avatar Image-->
         <img
           class="masthead-avatar rounded-circle mb-5"
-          src="assets/img/me_4.jpg"
+          src=""
           alt=""
         />
         <!-- Masthead Heading-->
